--- a/browserViews/css/theme/theme-light.css
+++ b/browserViews/css/theme/theme-light.css
@@ -2,11 +2,13 @@
 @import "text-color-black.css";
 
 body {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight0, hsl(0, 0%, 87%)); /* #303030; */
 }
 
 header,
 footer {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight1, hsl(0, 0%, 74%));
 }
 
@@ -19,10 +21,12 @@ select,
 .panel-item,
 .websiteItem,
 .buttonItem {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2, hsl(0, 0%, 81%)); // #424242;
 }
 
 #tooltip {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 81%, 0.95));
 }
 
@@ -30,6 +34,7 @@ input[type="text"],
 input[type="number"],
 input[type="url"],
 textarea {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2, hsl(0, 0%, 81%));
 	outline: none;
 }
@@ -38,14 +43,17 @@ input[type="text"]:focus,
 input[type="number"]:focus,
 input[type="url"]:focus,
 textarea:focus {
+	/*noinspection CssUnresolvedCustomProperty*/
 	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95));
 }
 
 input[type="range"]::-webkit-slider-thumb {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2, hsl(0, 0%, 81%)); /* #424242 */
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight1, hsl(0, 0%, 74%));
 }
 
@@ -53,10 +61,11 @@ input[type="range"]::-webkit-slider-runnable-track {
 header,
 .panel-item,
 footer {
+	/*noinspection CssUnresolvedCustomProperty*/
 	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 87%));
 }
 
 #tooltip {
-	/* stylelint-disable-line no-duplicate-selectors */
+	/*noinspection CssUnresolvedCustomProperty*/
 	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 87%));
 }
