--- a/browserViews/css/scrollbar.css
+++ b/browserViews/css/scrollbar.css
@@ -4,6 +4,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--webkitScrollbar, rgba(170, 170, 170, 0.5));
 	border-radius: 6px;
 	transition: background-color 0.2s linear;
