--- a/browserViews/css/theme/theme-dark.css
+++ b/browserViews/css/theme/theme-dark.css
@@ -2,10 +2,12 @@
 @import "text-color-white.css";
 
 body {
-	background-color: var(--bgLight0, hsl(0, 0%, 19%)); // #303030
+	/*noinspection CssUnresolvedCustomProperty*/
+	background-color: var(--bgLight0, hsl(0, 0%, 19%)); /* #303030 */
 }
 
 header, footer {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight1, hsl(0, 0%, 13%));
 }
 
@@ -18,10 +20,12 @@ select,
 .panel-item,
 .websiteItem,
 .buttonItem {
-	background-color: var(--bgLight2, hsl(0, 0%, 26%)); // #424242
+	/*noinspection CssUnresolvedCustomProperty*/
+	background-color: var(--bgLight2, hsl(0, 0%, 26%)); /* #424242 */
 }
 
 #tooltip {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 26%, 0.95));
 }
 
@@ -29,6 +33,7 @@ input[type='text'],
 input[type='number'],
 input[type='url'],
 textarea {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2, hsl(0, 0%, 26%));
 	outline: none;
 }
@@ -37,14 +42,17 @@ input[type='text']:focus,
 input[type='number']:focus,
 input[type='url']:focus,
 textarea:focus {
+	/*noinspection CssUnresolvedCustomProperty*/
 	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95));
 }
 
 input[type='range']::-webkit-slider-thumb {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight2, hsl(0, 0%, 26%)); // #424242
 }
 
 input[type='range']::-webkit-slider-runnable-track {
+	/*noinspection CssUnresolvedCustomProperty*/
 	background-color: var(--bgLight1, hsl(0, 0%, 13%));
 }
 
@@ -52,10 +60,11 @@ input[type='range']::-webkit-slider-runnable-track {
 header,
 .panel-item,
 footer {
+	/*noinspection CssUnresolvedCustomProperty*/
 	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 13%));
 }
 
 #tooltip {
-	/* stylelint-disable-line no-duplicate-selectors */
+	/*noinspection CssUnresolvedCustomProperty*/
 	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 13%));
 }
